# yoyodyne

./: .gitignore  LICENSE.txt  README.md  ptr_gen_trm_steps.pstats  pyproject.toml  requirements.txt  setup.py  transducer.sh  yoyodyne.bib
.circleci/: config.yml
configs/: README.md  accuracy_checkpoint.yaml  altogether.yaml  attentive_deep_lstm.yaml  attentive_gru.yaml  attentive_gru2lstm.yaml  attentive_lstm.yaml  attentive_lstm_linear.yaml  attentive_lstm_separate.yaml  attentive_lstm_shared.yaml  attentive_unilstm.yaml  context_hard_attention_linear.yaml  decoder_only_transformer.yaml  frankenformer.yaml  hard_attention_lstm.yaml  loss_checkpoint.yaml  pointer_generator_lstm.yaml  pointer_generator_transformer.yaml  rotary_causal_transformer.yaml  rotary_pointer_generator_transformer.yaml  rotary_pointer_generator_transformer_shared_features.yaml  rotary_transformer.yaml  sigmorphon2016.yaml  soft_attention_deep_lstm.yaml  soft_attention_gru.yaml  soft_attention_gru2lstm.yaml  soft_attention_lstm.yaml  soft_attention_lstm_linear.yaml  soft_attention_lstm_separate.yaml  soft_attention_lstm_shared.yaml  soft_attention_unilstm.yaml  trainer.yaml  transducer_lstm.yaml  transformer.yaml  transformer_invariant.yaml  transformer_shared.yaml
configs/.bad/: BAD_attentive_lstm.yaml  BAD_attentive_lstm_linear.yaml  BAD_pointer_generator_lstm.yaml  BAD_transformer_separate.yaml  README.md
examples/: README.md
examples/concatenate/: README.md  concatenate.py
examples/maxwell/: README.md
examples/unking/: README.md  unk.py
examples/wandb_sweeps/: README.md  best_hyperparameters.py  config.yaml  get_hyperparameters.py  get_wandb_results.py  make_wandb_sweep.py  sweep.py  train_wandb_sweep.py  train_wandb_sweep_agent.py  util.py
examples/wandb_sweeps/configs/: grid.yaml  tune.yaml
tests/: collator_test.py  conftest.py  datamodule_test.py  dataset_test.py  gflop_test.py  metrics_test.py  model_test.py  module_test.py  tsv_test.py  yoyodyne_test.py
tests/testdata/: Makefile  README.md  generate.py  toy.sed
tests/testdata/configs/: README.md  attentive_gru.yaml  attentive_lstm.yaml  attentive_lstm_gru_features.yaml  attentive_lstm_gru_source.yaml  attentive_lstm_linear_features.yaml  attentive_lstm_separate_features.yaml  attentive_lstm_shared_features.yaml  attentive_lstm_transformer_source.yaml  causal_transformer.yaml  causal_transformer_student_forcing.yaml  checkpoint.yaml  context_hard_attention_gru.yaml  context_hard_attention_lstm.yaml  context_hard_attention_lstm_separate_features.yaml  context_hard_attention_transformer.yaml  decoder_only_transformer.yaml  gru.yaml  hard_attention_gru.yaml  hard_attention_lstm.yaml  hard_attention_lstm_separate_features.yaml  hard_attention_transformer.yaml  ice_g2p_data.yaml  lstm.yaml  misconfigured_encoder_layers_neq_decoder_layers.yaml  misconfigured_features_embedding_neq_model_embedding.yaml  misconfigured_source_embedding_neq_model_embedding.yaml  pointer_generator_gru.yaml  pointer_generator_lstm.yaml  pointer_generator_lstm_separate_features.yaml  pointer_generator_lstm_student_forcing.yaml  pointer_generator_transformer.yaml  pointer_generator_transformer_linear_features.yaml  pointer_generator_transformer_student_forcing.yaml  real_trainer.yaml  rotary_causal_transformer.yaml  rotary_context_hard_attention_transformer.yaml  rotary_context_hard_attention_transformer_separate_features.yaml  rotary_hard_attention_transformer.yaml  rotary_pointer_generator_transformer.yaml  (+27 more)
tests/testdata/copy/: Makefile  test.tsv
tests/testdata/data/: Makefile  README.md  randgen.py
tests/testdata/delete/: Makefile  train.tsv
tests/testdata/ice_g2p/: Makefile  test.tsv  train.tsv
tests/testdata/identity/: Makefile  dev.tsv
tests/testdata/reverse/: Makefile  train.tsv
tests/testdata/tur_inflection/: Makefile  dev.tsv  train.tsv
tests/testdata/upper/: Makefile  test.tsv  train.tsv
yoyodyne/: .train.py.swp  __init__.py  batches.py  batching.py  callbacks.py  cli.py  collators.py  dataconfig.py  datasets.py  defaults.py  evaluators.py  indexes.py  metrics.py  optimizers.py  predict.py  schedulers.py  sizing.py  special.py  symbols.py  test.py  train.py  trainers.py  util.py
yoyodyne/cli/: hyperparameters.py  main.py  sweep.py
yoyodyne/data/: __init__.py  batches.py  collators.py  datamodule.py  datamodules.py  dataset.py  datasets.py  index.py  indexes.py  mappers.py  tsv.py
yoyodyne/models/: __init__.py  attention.py  base.py  beam_search.py  embeddings.py  expert.py  generation_probability.py  hard_attention.py  hmm.py  lstm.py  pointer_generator.py  positional_encoding.py  rnn.py  transducer.py  transformer.py
yoyodyne/models/encoders/: __init__.py  base_encoder.py  linear.py  lstm.py  pointer_generator.py  positional_encoding.py  transformer.py
yoyodyne/models/modules/: __init__.py  base.py  (+12 more)
(+401 files in other folders)
