[build-system]
requires = ["setuptools >= 75.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["yoyodyne*"]
exclude = ["examples*"]

[project]
name = "yoyodyne"
version = "0.3.3"
description = "Small-vocabulary neural sequence-to-sequence models"
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "Apache 2.0" }
authors = [
    {name = "Adam Wiemerslage"},
    {name = "Kyle Gorman"},
    {name = "Travis Bartley"},
]
keywords = [
    "computational linguistics",
    "morphology",
    "natural language processing",
    "language",
]
dependencies = [
    "maxwell >= 0.2.6",
    "numpy >= 2.2.3",
    "lightning >= 1.7.0, < 2.0.0",
    # TODO: checkpoint loading error with 2.6.0; see #305.
    "torch >= 2.5.1, < 2.6.0",
    "torchmetrics >= 1.6.0",
    "wandb >= 0.18.5, < 0.19.0",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
]

[project.scripts]
yoyodyne-predict = "yoyodyne.predict:main"
yoyodyne-train = "yoyodyne.train:main"

[project.urls]
homepage = "https://github.com/CUNY-CL/yoyodyne"
