[build-system]
requires = ["setuptools >= 72.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yoyodyne"
version = "0.4.0"
description = "Small-vocabulary neural sequence-to-sequence models"
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">= 3.10,<3.141"
authors = [
    { name = "Adam Wiemerslage" },
    { name = "Kyle Gorman", email = "kylebgorman@gmail.com" },
    { name = "Travis Bartley" },
]
keywords = [
    "computational linguistics",
    "morphology",
    "natural language processing",
    "language",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "accelerate>=1.6.0,<2.0.0",
    "jsonargparse[signatures]>=4.28.0,<5.0.0",
    "lightning>=2.4.0,<3.0.0",
    "maxwell>=0.2.6",
    "pyyaml>=6.0,<7.0",
    "torch>=2.4.0,<3.0.0",
    "torchmetrics>=1.4.0post0,<2.0.0",
    "wandb>=0.18.0,< 0.19.0",
]

[project.scripts]
yoyodyne-predict = "yoyodyne.predict:main"
yoyodyne-train = "yoyodyne.train:main"

[project.urls]
homepage = "https://github.com/CUNY-CL/yoyodyne"

[tool.setuptools.packages.find]
include = ["yoyodyne*"]
exclude = ["configs*", "examples*"]

[tool.setuptools]
include-package-data = false
