[build-system]
requires = ["setuptools >= 72.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yoyodyne"
version = "0.4.6"
description = "Small-vocabulary neural sequence-to-sequence models"
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.10,<3.15"
authors = [
    { name = "Adam Wiemerslage" },
    { name = "Kyle Gorman", email = "kylebgorman@gmail.com" },
    {name = "Travis M. Bartley"},
]
keywords = [
    "computational linguistics",
    "morphology",
    "natural language processing",
    "language",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "PyYAML>=6.0.2,<7.0.0",
    "jsonargparse[signatures]>=4.40.0,<5.0.0",
    "lightning==2.6.0",
    "maxwell>=0.2.6",
    "numpy>=2.0.0,<3.0.0",
    "torch==2.9.1",
    "torchmetrics==1.8.2",
    "wandb>=0.18.7,<0.19.8",
]

[project.scripts]
yoyodyne = "yoyodyne.cli.main:main"
yoyodyne_hyperparameters = "yoyodyne.cli.hyperparameters:main"
yoyodyne_sweep = "yoyodyne.cli.sweep:main"

[project.urls]
homepage = "https://github.com/CUNY-CL/yoyodyne"

[tool.setuptools.packages.find]
include = ["yoyodyne*"]
exclude = ["configs*", "examples*"]

[tool.setuptools]
include-package-data = false
